# learn-opengl

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBufferLayout.h  main.cpp
src/res/shaders/: Basic.shader  BatchTexture.shader  Complex.shader  Uniform.shader
src/tests/: CMakeLists.txt  Test.h  TestBatchTexture.cpp  TestBatchTexture.h  TestClearColor.cpp  TestClearColor.h  TestMultipleObjects.cpp  TestMultipleObjects.h  TestTriangle.cpp  TestTriangle.h  TestUniform.cpp  TestUniform.h
